# scram

./: .gitignore  AGENTS.md  main.py  pyproject.toml
artifcacts/: future_specs.md  overview.md  specs.md  version0.1.md
artifcacts/tasks/: task-00-initialization.md  task-01-fetching-engine.md  task-02-ai-agent.md  task-03-tui.md  task-04-data-export.md
scram_hpc_rs/: Cargo.toml  pyproject.toml
scram_hpc_rs/src/: browser.rs  inference.rs  lib.rs
src/agent/: graph.py  nodes.py  state.py
src/ai/: compression.py  embeddings.py  gemini.py  prompts.py
src/core/: config.py  events.py  logging.py
src/data/: cache.py  collector.py  export.py  graph.py
src/fetching/: engine.py  rate_limiter.py
src/tui/: app.py  styles.tcss
tests/: test_agent.py  test_export.py  test_fetching.py  test_incremental.py  test_intelligent_extraction.py  test_main.py  test_ml_pipeline.py  test_new_features.py  test_parallel_agent.py  test_scalability.py
